2011-04-16 Jiri Olsa <olsajiri@gmail.com>
	* fix display of char arguments

2011-04-06 Jiri Olsa <olsajiri@gmail.com>
	* fix memory leak in the argument display code

2011-04-05 Jiri Olsa <olsajiri@gmail.com>
	* fix controled config bug - missing shared config assignment
	* moving conf header files to new location + rename s/conf/h/
	* adding support for configuration file

2011-02-15 Jiri Olsa <olsajiri@gmail.com>
	* moving debian directory to the packaging
	* Sebastian Pipping <sping@gentoo.org>
	  - fix LDFLAGS/CFLAGS usage

2011-01-31 Jiri Olsa <olsajiri@gmail.com>
	* adding support for global symbol config
	  one global symbol tree to rule them all
	    - only one tree is searched during the plt entry/exit
	    - symbols are added during the bind audit callback

2010-10-17 Jiri Olsa <olsajiri@gmail.com>
	* Artur Skawina <art.08.09@gmail.com>
		- enhancing names check with *-logic for
		  "-l -t -f -s -n -b" options

-------------------------------------------------------------------------------
latrace 0.5.10

2010-10-13 Jiri Olsa <olsajiri@gmail.com>
	* Artur Skawina <art.08.09@gmail.com>
		-  add '-n' option, allowing to omit tracing certain symbols
	* 0.5.10 release changes

2010-10-02 Jiri Olsa <olsajiri@gmail.com>
	* Akos Pasztory <akos.pasztory@gmail.com>
		- more sophisticated parsing of /proc/self/maps

2010-09-15 Jiri Olsa <olsajiri@gmail.com>
	* dynamic rlimit stack check
	* recognize [stack] map arrea and handle it properly
	* synchronize --no-* option names

2010-09-07 Jiri Olsa <olsajiri@gmail.com>
	* adding stack limits dynamic check
		- based on proposal from Akos Pasztory
		- enabled by default, disable by new '-Y' option

2010-08-05  Jiri Olsa <olsajiri@gmail.com>
	* changed config file magic defines
	* separate arguments display code, so it could be
	  disabled for not supported architectures
	* updating license info

2010-07-02  Jiri Olsa <olsajiri@gmail.com>
	* fixing output for thread applications
	  - proper tid displayed for pipe mode